--- a/labs/main/templates/main/tpr/tprlabsLinks.html
+++ b/labs/main/templates/main/tpr/tprlabsLinks.html
@@ -1,4 +1,4 @@
-            <a href="{% url 'home' %}"><li><i class="fa fa-home" aria-hidden="true"></i></i>  Главная страница</li></a>
+            <a href="{% url 'main_ais' %}"><li><i class="fa fa-home" aria-hidden="true"></i></i>  Главная страница</li></a>
             <a href="{% url 'register' %}"><li><i class="fa fa-home" aria-hidden="true"></i></i>  Страница регистрации</li></a>
             <a href="{% url 'about' %}"><li><i class="fa fa-home" aria-hidden="true"></i></i>  О нас</li></a>
             <a href="{% url 'news_home' %}"><li><i class="fa fa-home" aria-hidden="true"></i></i>  Новости</li></a>
